--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Welcome to My Website</h1>
-    <img class="image1" src="/media/My D88 dependant and Independant - Copy.png">
+    <img class="image1" src="media/My D88 dependant and Independant - Copy.png">
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae aliquam similique ducimus architecto harum,
         deserunt voluptatem aspernatur facere quidem voluptates nisi sunt temporibus! Earum sapiente facere quaerat
         ratione quas quam!</p>
