--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Welcome to My Website</h1>
-    <img class="image1" src="media/My D88 dependant and Independant - Copy.png">
+    <img class="image1" src="media/sweta.jpg">
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae aliquam similique ducimus architecto harum,
         deserunt voluptatem aspernatur facere quidem voluptates nisi sunt temporibus! Earum sapiente facere quaerat
         ratione quas quam!</p>
@@ -19,7 +19,7 @@
         facere quaerat ratione quas quam!</p>
 
         <div class="layout">
-            <img class="image2" src="media/My D88 dependant and Independant - Copy.png" alt="">
+            <img class="image2" src="media/sweta.jpg" alt="">
           <p class="Para2">
             The TLR4 signaling pathway is activated upon binding of lipopolysaccharide (LPS) to the TLR4/MD-2 complex. This interaction triggers the recruitment of adaptor proteins MyD88 and TIRAP to the intracellular domain of TLR4. MyD88 then recruits and activates IRAK kinases, leading to the formation of a signaling complex. This complex activates TRAF6, which subsequently activates the TAK1 kinase complex. TAK1 then phosphorylates and activates IKK and MAPK pathways. The IKK complex phosphorylates IκB, leading to its degradation and the release of NF-κB. Activated NF-κB translocates to the nucleus and induces the expression of pro-inflammatory genes. Simultaneously, the MAPK pathway activates AP-1 transcription factors, further amplifying the inflammatory response. This cascade results in the production of pro-inflammatory cytokines, chemokines, and other inflammatory mediators.
           </p> 
